--- a/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/Протоколы противодействия Перекидышам..md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/Протоколы противодействия Перекидышам..md
@@ -9,8 +9,8 @@
 0. Избегать физического контакта кожа к коже.
 1. Не соглашатся на прогулку, срезать дорогу, не соглашатся на телепортацию.
 2. Если вас теллепортировали в место похожее на лес но с незнакомыми вам созвездиями в небе или без определенного источника солнечного света или с подозрительно себя ведущими деревьями(тут и далее такое место будет называтся Зона Лес):
-- вас выкинет от туда если вы вырубите или убъете того кто вас туда телепортировал.
-- вас выкинет от-туда если вы сбежите от того кто вас туда теллепортировал. 
+- Был прицедент когда солдат вернулся из зоны Лес убив Мертвеца теллепортировавшего его туда.
+- Был прицедент когда солдат покинул зону Лес удалившись от теллепортировавшего его туда Бледнгого на 25-50метров . 
 
 Против Бледного.
 0. Покинуть его радиус.
@@ -21,5 +21,3 @@
 Против Мертвеца.
 0. Транквилизаторы см. приложение №1 список Мертвеца
 1. У него слабое сердце.
-2. Если он вас теллепортировал в место похожее на Лес, убив его вы вернётесь туда от куда он вас телепортировал.
-3. 
