--- a/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/стая/Стая.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/стая/Стая.md
@@ -1,62 +1,48 @@
-[[Мак]] [[Матвей]] мужчину до сорока лет, в веснушках 
+[[Мак/Матвей/Полярник]] мужчину до сорока лет, в веснушках 
 1. Всегда превращается в то, что нужно другим, используя Агентов в зоне ДОМ.
 2. Восполняет енергию Агента, через аватара вылетающего в космос.
 3. Эпизоды. Эпилепсия. Хор лакримоза.
 
-
-
-
-
-[[Клара]]
+[[Клара/Самозванка]]
 1. Перевертыш. Чума.
 2. Чудеса при касании подушечками пальцев кожи (целитель, умертвитель).
 3. Эпизоды. Шабнак.
 
-
-
-
-
-[[Рыжий]][[Бром]] браслеты белый, серый и синий, мотоциклетныю броню покрытую рисунками текстуры змеиной кожи, балахон и сварочные очки хамелион.
+[[Рыжий/Бром]] браслеты белый, серый и синий, мотоциклетныю броню покрытую рисунками текстуры змеиной кожи, балахон и сварочные очки хамелион.
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ.
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. Гипноз. Вводит в транс и "заражает" дружбой. Эффект накладывается в зоне ДОМ и сохраняется когда жертва выходит из радиуса. Длится 12 часов. Работает в обе стороны.
 4. Умертвитель. Эпизодами и умышленно.
 
-
-
-
-
-
-[[Прядь]][[Мона]]
+[[Прядь/Мона/Крыса]] черный панк-гранж стиль, бомбы на ногах, шаровары заканчивающиеся на средине колена резинкой, футболка до средины бедра с принтом "hail satan and trust no one", джинсовая куртка в дырках и потёртостях. Она подстриглась под мальчиковый стиль.забитый татухами рукав на левой руке
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ .
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. Перевертыш переходит в форму для коммуницирования с Агентами в зоне ДОМ.
 
-черный панк-гранж стиль, бомбы на ногах, шаровары заканчивающиеся на средине колена резинкой, футболка до средины бедра с принтом "hail satan and trust no one", джинсовая куртка в дырках и потёртостях. Она подстриглась под мальчиковый стиль.забитый татухами рукав на левой руке
-
-
-
-
-
-
-[[бледный]] хорошего человека должно быть много джинсы, куртка и ботики, кожа и серый мех. На голове меховая шапка покрывающая голову и скрывающая глаза, натянута до рта.
+[[Бледный]] хорошего человека должно быть много джинсы, куртка и ботики, кожа и серый мех. На голове меховая шапка покрывающая голову и скрывающая глаза, натянута до рта.
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ.
 2. Аура\запах с радиусом 2м. Зона ДОМ. Аура растёт когда он не выходит за её пределы. Бледный видит\чует, всё во всех зонах ДОМ одновременно.
 3. Одновременное восприятие инфы из разделённых зон Дом и Лес. (вероятно множественные сенсорные проекции)
 
-
-
-[[Мертвец]][[Мортимер]] [[Мортус]] 
-мужчина с короткими дредами. Он одет в темно-зеленую одежду, в милитаристском стиле с разношерстными нашивками и на правом рукаве куртки.
+[[Мертвец/Мортимер/Мортус]] 
+мужчина с короткими дредами. Он одет в темно-зеленую одежду, в милитаристском стиле с разношерстными нашивками на правом рукаве куртки.
 1. Перевертыш постоянно в Пограничной Форме между Лесом и зоной ДОМ.
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. При умирании, тело переходит в Форму перетекая в Лес.
-4. Диалог с мертвыми.
+4. Диалог с мертвыми.?????
 
-Везде где зараженный задерживается дольше одной минуты аура\запах создаёт точку для перехода или коммуникации в Стае, эта точка будет оставатся активной еще час после того как зараженный выйдет из неё. 
+[[Сторож]] [[Хранитель Пространства]] [[Черный Ральф]]
+1. Ходок.
 
-
-
-Вонючка был маленький, некрасивый, с огромными нелепыми ушами и огромными круглыми глазами. На розовой рубашке темнели жирные пятна, а таких грязных рук, как у него, Кузнечик ни у кого еще не видел.
+[[табаки]]Вонючка был маленький, некрасивый, с огромными нелепыми ушами и огромными круглыми глазами. На розовой рубашке темнели жирные пятна, а таких грязных рук, как у него, Кузнечик ни у кого еще не видел.
 Его круглые совиные глаза были слишком большими, почти бездонными, если смотреть в них долго. Они сияли странным, манящим светом, как небо, ощетинившееся звездами. Кузнечик смотрел дольше, чем следовало. Сияние притянуло его.
+[[Хранитель Времени]]
+1. Ходок.
+2. Временные потоки.
+2.1. перемещение в созданных временных потоках.
+3. Магический Технарь. Зелья и амулеты наделяющие частичкой сил от Агентов в зоне ДОМ.
+2. воспоминания в запахи, разговоры и песни в ракушки орешки, сны в полые тыквы и яблоки
+3. инфу только ту что попала в зону дом
 
+[[Хранитель Гравитации]][[Саара]]
+[[Хранитель Материи]][[Стервятник]]
