--- a/R0_tail/n8/Тремор/0. Вход/лиза/реридено/1. лиза неф м c .md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/реридено/1. лиза неф м c .md
@@ -4,15 +4,12 @@
 		браян и алек
 		протоколы мастер скрытник против Рыжего
 			снимет очки только кто-то встретится с ним взглядом даёшь тьму и мы акуратно сваливаем
-			Алек следи за применением ими сил
+			Алек следи за применением ими сил????????????
 		Заказчик хочет больше узнать про работу Дрёма и Гриба. Они с Перекидышами разместились в подвалах.
-		Бледный несколько раз находил все камеры и микрофоны которые Заказчик там оставлял.
 	Алек
 		ты могла бы сама всё вытащить из Гриба.
 		Да, но Выверт еще не придумал как производить лекарство от мигрени Мыслителя без Гриба. Всё еще на стадии реверс инжинеринга. Есть подозрение что эффективность вещества зависит от сил Грибника.
 		Не хочу случайно испортить наши деловые отношения. Не хотела. Но Заказчик настаивает.
-
-Так Суку не берём? Нетзнаю это тонкая социальная работа.
 
 Как Заказчик защищает их от ищеек СКП и групп вроде WatchDogs?
 	Думаю что никак, в СКП наверное уже знают где Перекидыши, но люди Заказчика убедили руководство воздержатся от эскалации. Или они готовят антителепортационную комнату. Или ждут пока освободятся кейпы со способностями подходящими для преследования этой шайки. Незнаю вокруг этого вопроса много Мыслителей.
@@ -29,9 +26,6 @@
 Что они делают?
 		Они обсуждали стволовые клетки, анаболики и шутили про Ктулху. Слышал кусок их разговора, 
 		Черепушка не пережарил електричеством мозг Пряди. Потом привезли технику, меня по благодарили и выпровадили.
-
-в покерной есть плазма они там смотрят всякое Суку можно разместить там.
-		пока мы будем резатся в карты.
 
 Бледный почти всегда Возле Пряди, редко покидает её палату.
 
