--- a/R0_tail/n8/Тремор/0. Вход/лиза/реридено/лиза лаба.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/реридено/лиза лаба.md
@@ -19,13 +19,8 @@
 		через Рыжего, Мертвец редко остаётся на связи.
 		Они не носят маски, а ты продолжаешь называть их кейповскими именами?[[лиза]]
 
-Алек говорит, пойдёшь со мной. Вечером, Рыжий и Мертвец будут играть в карты. Сможешь ненавязчиво примазацца к Бледному, может удастца с ним по прыгать туда сюда.
-
-И тут входит Рыжий он запыхавшийся. клоунски одет
-			он спешил, хотел застать меня. Почему не позвонил? Меня сдали котото... Грибник скинул Рыжему смс как только я пришла.[[лиза]]
-			Так ли им нужен здесь Алек?
-		Рыжий флирт, Лиза. Мне нужна помощь твоей силы с Прядью
-			нейросфера не поможет её оживить, а если и да то в лучшем случае это уже будет другой человек с кусками моза заменёнными на новые живые нейросети выращенные искуственно.[[лиза]]
+Рыжий флирт, Лиза. Мне нужна помощь твоей силы с Прядью
+нейросфера не поможет её оживить, а если и да то в лучшем случае это уже будет другой человек с кусками мозга заменёнными на новые живые нейросети выращенные искуственно.[[лиза]]
 
 Не дело не в том, наше положение связывает нам руки, в плане доступных нам целителей, у Полярника есть один на примете к которому можно обратится. Копировать чужие силы, особенно Умников для него особенно проблематично по этому мы хотим просто попросить тебя о помощи.
 
