--- a/R0_tail/n8/МАК КВАНТ СИМУРГ/Предыстория Стаи/1995 15 лет/Грибник 6 стая бегемот москва.md
+++ b/R0_tail/n8/МАК КВАНТ СИМУРГ/Предыстория Стаи/1995 15 лет/Грибник 6 стая бегемот москва.md
@@ -39,7 +39,7 @@
 
 *** [[Крассный]] ***
 
-[[Стая]] в Лесу.
+[[Стая Досъе]] в Лесу.
 Выход за городом не доступен, "запах" прошел.
 Выходы в допросной, в квартире и у Мертвеца были не доступны. Мервец возможно был убит, это временное явление. Почему пропали другие два выхода? Идей не было. Такое было впервые. Впервые они оказались отрезаны от реальности. Без запасных точек выхода.
 - Словно за нами дверь закрыли. - говорит Табаки. Достаёт стеклянную пол литровую фляжку с водкой и красным перцем. Фляшка отправляется по кругу. Табаки встаёт с каляски снимает кросовки и прогуливается то траве. В Лесу темнеет, а значит и в реальности тоже наступала ночь.
