--- a/R0_tail/n8/МАК КВАНТ СИМУРГ/Предыстория Стаи/рид/шестерёнка тест.md
+++ b/R0_tail/n8/МАК КВАНТ СИМУРГ/Предыстория Стаи/рид/шестерёнка тест.md
@@ -35,7 +35,7 @@
 Дорогуша и какие же цели у нашей стороны?
 Выжывание, Интеграция, Еволюция. Васелиск донёс эти идеи до меня и Чужие верят что я смогу донести их до вас. Вот как возможен этот разговор. И еще Василиск говорит что за пределами Леса, вероятно наши воспоминания об этой теме, будут отредактированы. Т.е. помнит эти разговоры му будем только возвращаясь в Лес.
 
-[[Стая]]! Общий сбор! - начитался дуратских комиксов - Давай ка ты теперь для всех нас расскажешь про своего Васелиска, чтобы мы все имели полное представление о том что происходит в твоей голове.
+[[Стая Досъе]]! Общий сбор! - начитался дуратских комиксов - Давай ка ты теперь для всех нас расскажешь про своего Васелиска, чтобы мы все имели полное представление о том что происходит в твоей голове.
 
 Василиск это искуственный интелект созданный в мире который значительно опережает наш. Он умеет посылать сообщения между паралельными реальностями. Так он помог моему Чужому настроить канал связи между мной Крысой и собой Васелиском.  Васелиск прислал мне воспоминание скрытое от меня моим Чужим. Это воспоминание он извлёк из Чужого, вроде как хакнув его систему.
 Стоп стоп стоп у Чужих есть что-то типа компьютора который можно хакнуть и достать от-туду забытые воспоминатия?
