--- a/R0_tail/n8/Тремор/0. Вход/лиза/0. Tats.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/0. Tats.md
@@ -1,6 +1,7 @@
 Лиза открыла файл подназванием "Доклад о Перекидышах" в текстовом редакторе. Пробежалась глазами по вступлению, исправила пару старых ошибок и перефразировала пару предложений. В меню редактора слева, она щелкнула мышью по вкладке Бледный. В открывшемся файле её ждал фарш из её собственного текста, присутствовали строки расшифрованых аудио заметок и строки понадёрганые из рапортов ЕАР, "Крассной Рукавички" и СКП. Предстояло разделить слитую дезу, от объективной действительности, проводя собственные следственные мероприятия.
 
-Она расширила диапазон своего взора чтобы можно было читать абзацами, получая подсказки от силы и принялась систематезировать, причёсывать свой доклад. Иногда она останавливалась когда поток подсказок от её силы становился слишком сумбурным. В такие момменты она перечитывала текст в слух.
+Она расширила поле своего зрения, чтобы можно было читать абзацами, получая подсказки от силы и принялась систематезировать, причёсывать свой доклад. Иногда она останавливалась когда поток подсказок от её силы становился слишком сумбурным, она сужала поле зрения чтобы читать словами в слух и дать себе стабилизировать внимание, прежде чем вернутся к ускоренной обработке текста:
+-  Им снилось как они находили в лаборатории заблудившегося слепого мальчика который выпытывал у них расположение секретных объектов ..., ... зрительные нервы не развиты, при попытке задержания отрядом "Вымпел", было замечено как он атаковал зеркало...,  ... При попытке задержания спецназом ЕАР, был подстрелен транквилизатором R33799, в правую скулу. Телепортировался прежде чем потерял сознание.
 
 Окна в комнате Лизы были на солнечной стороне. Комната была хорошо освещена солнечным светом. Рулонные шторы блек-аут, были скручены под потолок и не применялись в последнюю неделю. За это можно было поблагодарить Гриба. Его капли от мигрени Мыслителя устраняли боль и светобоязнь, при этом не превращали тебя в овощь. На время мигрени, сила слабела процентов на 80 как и раньше, но это уже было лучше всего что могла предложить та же МедХолл. Во всяком случае то что они предлагали официально.
 
