--- a/R0_tail/n8/Тремор/0. Вход/лиза/1. Tats.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/1. Tats.md
@@ -32,7 +32,9 @@
 Дрём взял ключи со стола подбросил их и сказал выходя лабораторную-штору:
 - Пошли, сделаем невозможное. - Он сбрасил перчатки и махнул остальным следовать за ним.
 
-Гриб хватает картонную коробку из под микроволновой печи, сбрасывает туда колбы, какие-то устройства и провода из под стола. Мрак и Регент идут за ними следом на выход в коридор. Все вместе они спускаются в лифте на нижние этажы. У лифта их встречает фантом Бледного. Никем не замеченый, он следует за делегацией к палате Пряди.
+Гриб хватает картонную коробку из под микроволновой печи, сбрасывает туда колбы, какие-то устройства и провода из под стола. Мрак и Регент идут за ними следом на выход в коридор. Все вместе они спускаются в лифте на нижние этажы. Там фантомы Бледного в количестве двух штук. Один ползает в шкафкиках на кухне, второй втречает нашу делегацию у лифта. Никем не замеченый, он следует за ними к палате Пряди.
 
-Пока они идут по коридору, СИ визуализирует вокруг Бледного в палате, шумы и артефакты вроде тех из которых состоят его фантомы, он говорит в пустоту:
+"- Множественные сенсорные проекции из низкочастотных волн."
+
+Пока они идут по коридору, СИ визуализирует вокруг Бледного шумы и артефакты вроде тех из которых состоят его фантомы, в небольшом количестве до 50% по сравнению с артефактами появляющимися при телепортации. Он говорит в пустоту:
 - У меня гости. Внимательно.
