--- a/R0_tail/n8/Тремор/0. Вход/лиза/2. Tats.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/2. Tats.md
@@ -1,14 +1,16 @@
 
 Лиза смотрит на правый монитор.
 
-Матвей сидит за столом, его глаза закрыты, голова опущена, руки сжаты в кулаки, губы шевелятся. Лиза изменяет ракурс выводя на екран крупным планом губы Матвея и включает на максимум интрепретатор звуков. Матвей издаёт слабо различимый шепот в котором узнаётся молитва Сыну Божьему. Он делает паузу, выдох и из его рта выравается язычёк пламени. Он вскакивает и зажимает рот руками, садится под стену. СИ визализирует вокруг Морта активность електромагнитных волн, вроде тех которые излучают фантомы Бледного. Морт закуривает и говорит:
+Матвей сидит за столом, его глаза закрыты, голова опущена, руки сжаты в кулаки, губы шевелятся. Лиза изменяет ракурс выводя на екран крупным планом губы Матвея и включает на максимум интрепретатор звуков. Матвей издаёт слабо различимый шепот в котором узнаётся молитва Сыну Божьему. Он делает паузу, выдох и из его рта выравается язычёк пламени. Он вскакивает и зажимает рот руками, садится под стену. СИ визуализирует вокруг Морта активность фантомных-шумов. Морт закуривает и говорит:
 - Мы в порядке. - Бледный и Бром кивают.
 
 Бром на кухне, выпивает шот с водкой. Арлекин, Синегал и Челюсть отказались аргументируя это тем что у них не принято пить на задании. Брома это ни чуть не смутило.
 
-" - Расстояние между ними и Бледным почти 20 километров. Они всё еще могут коммуницировать между собой. Почти наверняка смогут и телепортироватся друг к другу. Бром бухает умышленно, почти демонстративно. Это не беспечность, это попытка показать себя слабым."
+" - Расстояние между ними и Бледным почти 20 километров. Они всё еще могут коммуницировать между собой. Почти наверняка смогут и телепортироватся друг к другу. Бром бухает умышленно, почти демонстративно. Это не беспечность, он хочет так показать себя слабым."
 
-Лиза настраивает СИ выводя на екран крупным планом поведение електро-химии в мозге Матвея. У неё нет специализированных знаний в этой области. Но это компенсируется её силой. Она видет изменение формы Короны, 60% от всей Гемма изменяют своё положение. Это микро-тригер? Это происходит каждый раз?
+Лиза настраивает СИ выводя на екран крупным планом поведение електро-химии в мозге Матвея. У неё нет специализированных знаний в этой области. Но это компенсируется её силой. Она видет изменение формы Короны, 60% от всей Гемма изменяют своё положение. 
+
+" - Это микро-тригер? Это происходит каждый раз?"
 
 Она приступает к заполнению своего доклада, сопровождая его скриншотами изменений в мозге матвея.
 
@@ -19,32 +21,34 @@
 Восьми палый робот занимающийся нейростимуляцией её мозга, пшикнул на мозг дизенфицирующим раствором, а потом питательным.    
 
 - Сколько это времени займёт? - Спросил Бледный с другого конца палаты. Он сидел в кресле запрокинув лиццо вверх.
-- Первые результаты увидим через 12 часов. Востановить память из мёртвых нейронов и вложить её в сознание оживлённого мозга, это задача не из тривиальных. Я не нашел ни одного успешного прицидента. Мне кажется проще и безопасней будет, попытатся оживить её и заново всему научить и воспитать из неё того человека который вам нужен. Я уже делал подобное когда работал в Мексике. На моём счету пять отличных солдатов созданных из мёртвых ебланов.
+- Первые результаты увидим через 12 часов. Нужно постоянно тормозить развитие Короны и Гемма. Иначе они слишком распространятся, не оставив места для сознания вашей подруги, а может и полностью её заменят. В моей практике были прецеденты в експерриментах с короной кода пациент терял личность и его тело полностью переходило под управление Сил. Востановить память из мёртвых нейронов и вложить её в сознание оживлённого мозга, это задача не из тривиальных. На моей памяти такого никогда не происходило. Мне кажется проще и безопасней будет, попытатся оживить её и заново всему научить и воспитать из неё то что вам нужно. Я уже делал подобное когда работал в Мексике. На моём счету пять отличных солдатов созданных из мёртвых ебланов.
 - Нам нужен не просто солдат, нам нужен человек с опытом управления силой Пряди.
 - А что такого особенного в её силе? - Браян стоял оперевшись на стену у выхода из комнаты. Так он мог видеть Дрёма, Грибника и Регента у койки Моны слева и Бледного с права в противоположном конце палаты.
-- Она могла говорить со своим Агентом. Иногда, он доводил её до панических атак, иногда он лгал ей подставляя и провоцируя конфликты. Прошли годы прежде чем они научились сотрудничать и достигли взаимо понимания.
-- Звучит как Шизофрения. - Сказал Регент.
+- Она могла говорить со своим Агентом. Иногда, он доводил её до панических атак, иногда он лгал ей подставляя и провоцируя конфликты. Прошли годы прежде чем они научились сотрудничать и достигли взаимопонимания.
+- Звучит как Шизофрения. - Сказал Регент. В его руках Нейросфера слабо-светилась лазурным и уже начала выпускать несколько тонких усиков длинною до двух сантиметров.
+- Она говорила, что голос называл себя Васелиском, мог предсказывать поступки людей, подсказывал как пользоватся незнакомыми ей технологиями и главное помогал ориентироватся в Лесу.
 
-Реакция Морта и Брома на слова Бледного да они слышали его они коммуницируют.
-отвлечение мак мертвец клонирование силы арлекино в комнате под сканерами
+В памяти Лизы поднялась инфа собраная о Пряди и подсказки сами начали всплывать:
+" - Васелиск говорил с ней на языках которые она сама знала, ....
 
-Арлекин с Бромом Синегал Челюсть на кухне планшет. Глаза скрыты. 
+
 Досье Мастер Скрытник правила для синегала челюсти.
 
-алек гриб дрём выкладывание Нейросфер на открытый мозг Пряди опрыскивание.
+" - Когда им не удастся вернуть её со всеми её навыками управления Васелиском. Они её оживят надеясь что удастся её заново обучить."
 
-Бледный она же вернётся со своими силами? Она будет помнить?
+Лиза набирает Заказчика. Трубку поднимают на первом гудке.
+- У них получится. Регент может саботировать воскрешение.
+- Нет. Ситуация под контролем. Узнай пределы возможностей их телепортов. Узнай больше про членов команды которых они скрывают. И я жду твой доклад по Нейросферам Грибника.
+- Эти експеррименты слишком рисскованы. Подвал жилой много этажки не подходящее место для таких експерриментов. Гриб совершенно не компетентен в таких вопросах, а Дрём совершенно маньяк, я ожидаю что он специально превратит труп Пряди в какое-то чудовище чисто из интереса.
+- Я знаю.
+- Это не должно произойти крядом с моей коммандой.
+- Я знаю. Вы для меня крайне ценны. О, и еще, я получил отчёт от моих химиков, они не знают как синтезировать препарат от мигрени мыслителя. Помоги Грибнику как то решить эту проблемму.
+- Я посмотрю что можно сделать.
 
-Подозрения Сплетницы саботаж Дрём мог бы оживить её сам. Но не вернуть память.
+Лиза положила трубку.
 
-Контакт с Заказчиком. Предупреждение у них получится. Нужно ли Алеку попытатся их саботировать?Нет. почему? займись докладом ситуация под контролем. 
-Он добрался до Дрёма? Дрём её добъёт, не оставив виновных. Не сделав никого врагом. Это не всё у него есть план Б.
-Лиза осмотрела комнату. Запись СИ пекремотка, отслеживание действий консуелы и охранников. 
+" - Заказчик подкупил Дрёма. У Пряди способности слишком проблемные для предсказателей услугами которых пользуется Заказчик. Наверное они выставят всё как несчастный случай к счастью это будет не сложно. Експеррименты с мозгами кейпов это всегда риск."
 
-%%Оп  замена апарата искуственного дыхания. СИ внутырь. Внутри апарата взрывчатка. Бледный её не заметил. Не подумал заглянуть внутырь своим фантомом.
-%%
-__________________________________
-Про Бледного Доклад ЕАР Рукавица рекоммендации противодействия
 _______________________________________
 доклад Мак сектанты возврат к Докладу Полярник
 _______________________________________
