--- a/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/стая/Стая Досъе.md
+++ b/R0_tail/n8/Тремор/0. Вход/лиза/Доклады/стая/Стая Досъе.md
@@ -9,29 +9,34 @@
 3. Эпизоды. Шабнак.
 
 [[Рыжий/Бром]] браслеты белый, серый и синий, мотоциклетныю броню покрытую рисунками текстуры змеиной кожи, балахон и сварочные очки хамелион.
-1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ.
+1. _[[излом-Перекидышей]](иП) 
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. Гипноз. Вводит в транс и "заражает" дружбой. Эффект накладывается в зоне ДОМ и сохраняется когда жертва выходит из радиуса. Длится 12 часов. Работает в обе стороны.
 4. Умертвитель. Эпизодами и умышленно.
 
 [[Прядь/Мона/Крыса]] черный панк-гранж стиль, бомбы на ногах, шаровары заканчивающиеся на средине колена резинкой, футболка до средины бедра с принтом "hail satan and trust no one", джинсовая куртка в дырках и потёртостях. Она подстриглась под мальчиковый стиль.забитый татухами рукав на левой руке
-1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ .
+1. _[[излом-Перекидышей]](иП) 
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. Перевертыш переходит в форму для коммуницирования с Агентами в зоне ДОМ.
 4. "... пишет самообновляющийся вредоносный код ...", "... в Крассной Рукавице работала в отделе выслеживающем незарегистрированых паралюдей для ЕАР  ...", "... склонна к вспышкам агрессии ...".
 
-[[Бледный]] хорошего человека должно быть много джинсы, куртка и ботики, кожа и серый мех. На голове меховая шапка покрывающая голову и скрывающая глаза, натянута до рта.
-1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ.
-2. Аура\запах с радиусом 2м. Зона ДОМ. Радиус\Аура растёт когда он не выходит за её пределы.
-3. (множественные сенсорные проекции) Фантомы незримые человеческим глазом, бесплотные. Являются точками входа\выхода. Активны только в Зоне Дом.
-4. Через фантомов видит всё пропитаное Зоной ДОМ. Объекты коммуницируют с ним излучением\ехолокацией???? 
+[[Бледный]] хорошего человека должно быть много. Джинсы, куртка и ботики, кожа и серый мех. На голове меховая шапка покрывающая голову и скрывающая глаза, натянута до рта.
+1. _[[излом-Перекидышей]](иП) 
+2. Аура\запах с радиусом 2м.(минимальный - растояние вытянутых ног или рук) Зона ДОМ. Радиус\Аура растёт когда он не выходит за её пределы. Если он покинет место своего обитания и выйдет из своей зоны, она начнёт сужатся до полного исчезновения в том месте которое он покинул. Когда он останавливается на новом месте, радиус его зоны начинает рости по метру за 15 минут.
+3. Создаёт множественные сенсорные проекции (фантомов) из низкочастотных волн, через которые воспринимает мир. Являются точками входа\выхода (Может телепортироватся к ним). Активны только в Зоне Дом.
+
+Сцены.
+a. Сержант .... и лейтенант ... ответственные за охрану Мертвеца в лабоаторном комплексе..., после нападения на лабораторию указали в своём рапорте что им снился Бледный(узнали его по кадрам с видеокамер в лаборатории). Им снилось как они находили в лаборатории заблудившегося слепого мальчика который выпытывал у них расположение секретных объектов.
+b. Зрительные нервы не развиты, при попытке задержания отрядом "Вымпел", было замечено как он атаковал зеркало.
+c. При попытке задержания спецназом ЕАР, был подстрелен транквилизатором R33799, в правую скулу. Телепортировался прежде чем потерял сознание.
+
 
 [[Мертвец/Мортимер/Мортус]] 
 мужчина с короткими дредами. Он одет в темно-зеленую одежду, в милитаристском стиле с разношерстными нашивками на правом рукаве куртки.
-1. Перевертыш постоянно в Пограничной Форме между Лесом и зоной ДОМ.
+1. _[[излом-Перекидышей]](иП)
 2. Аура\запах с радиусом 2м. Зона ДОМ.
-3. При умирании, тело переходит в Форму перетекая в Лес.
-4. Диалог с мертвыми.?????
+3. При умирании, его тело переходит в иП 100% %%Зона Лес под Холмами%%.
+%%4. Диалог с мертвыми.?????%%
 
 [[Сторож]] [[Хранитель Пространства]] [[Черный Ральф]]
 1. Ходок.
@@ -39,7 +44,7 @@
 [[табаки]]Вонючка был маленький, некрасивый, с огромными нелепыми ушами и огромными круглыми глазами. На розовой рубашке темнели жирные пятна, а таких грязных рук, как у него, Кузнечик ни у кого еще не видел.
 Его круглые совиные глаза были слишком большими, почти бездонными, если смотреть в них долго. Они сияли странным, манящим светом, как небо, ощетинившееся звездами. Кузнечик смотрел дольше, чем следовало. Сияние притянуло его.
 [[Хранитель Времени]]
-1. Ходок.
+1. _[[излом-Перекидышей]](иП) 
 2. Временные потоки.
 2.1. перемещение в созданных временных потоках.
 3. Магический Технарь. Зелья и амулеты наделяющие частичкой сил от Агентов в зоне ДОМ.
